[Feature] Fiber - swagger
